<resources>
    <string name="app_name">UPC RUSH</string>
    <string name="logInBtn">Log in</string>
    <string name="signUpTextView">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="not_created_yet">Not created yet</string>
    <string name="main_menu">Main menu</string>
    <string name="exit">Exit</string>
    <string name="textview">Welcome!</string>
    <string name="new_game">NEW GAME</string>
    <string name="new_game_image">new game</string>
    <string name="storageImage">TODO</string>
    <string name="stroageImage">TODO</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading...</string>
    <string name="current_money">Current money</string>
    <string name="returnBtn">Return</string>
    <string name="delete">Delete account</string>
    <string name="current_items">Current items</string>
    <string name="specifications">Specifications</string>
    <string name="quantity">Quantity</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="price">Price</string>
    <string name="historial_played_games">Historial - Played games</string>
    <string name="duration">Duration</string>
    <string name="result">Result</string>
    <string name="score">Score</string>
    <string name="id">Game ID</string>
    <string name="advanced_statistics">Advanced statistics</string>
    <string name="games_played">Games played</string>
    <string name="games_won">Games won</string>
    <string name="fastest_victory">Fastest victory</string>
    <string name="maximum_score">Maximum score</string>
    <string name="play_game">Play game</string>
    <string name="choose_items_to_use">Choose items to use</string>
</resources>