<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_New_Game">

    <Button
        android:id="@+id/newGamePlayBtn"
        android:layout_width="331dp"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="96dp"
        android:onClick="playBtn_Click"
        android:text="@string/play_game"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/red" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newGameRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="473dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="0dp" />

    <Button
        android:id="@+id/newGameReturnBtn"
        android:layout_width="331dp"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:onClick="returnBtn_Click"
        android:text="@string/returnBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/red" />

    <ProgressBar
        android:id="@+id/newGameProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="210dp"
        android:layout_height="197dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="262dp" />

    <TextView
        android:id="@+id/newGameTitleText"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="40dp"
        android:text="@string/choose_items_to_use"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>