<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Statistics">

    <Button
        android:id="@+id/statisticsAdvancedBtn"
        android:layout_width="331dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="104dp"
        android:onClick="advancedStatisticsBtn_Click"
        android:text="@string/advanced_statistics"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/darkblue_dark" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statisticsRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="444dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="196dp" />

    <Button
        android:id="@+id/statisticsReturnBtn"
        android:layout_width="331dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="28dp"
        android:onClick="returnBtn_Click"
        android:text="@string/returnBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/darkblue_dark" />

    <ProgressBar
        android:id="@+id/statisticsProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="210dp"
        android:layout_height="197dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="280dp" />

    <TextView
        android:id="@+id/statisticsTitleText"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:text="@string/historial_played_games"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>